--- a/blog/templates/blog/post_all.html
+++ b/blog/templates/blog/post_all.html
@@ -3,7 +3,7 @@
 
 {% for post in posts %}
     <h2><a href='{{ post.get_absolute_url }}'>{{post.title  }}</a></h2>
-    {{ post.modify_date|date:"N d, Y" }}
+    {{ post.modify_date|date:"N d일, Y" }}
     <p>{{ post.description }}</p>
 {% endfor %}
 
