--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+
         <h1>Post Archives until {% now "N d, Y" %}</h1>
             <ul>
                {% for date in date_list %}
                 <li style="display: inline;">
-                    <a htef="{% url 'blog:post_year_archive' date|date:'Y' %}">Year-{{ date|date:"Y" }}</a>
+                    <a href="{% url 'blog:post_year_archive' date|date:'Y' %}">Year-{{ date|date:"Y" }}</a>
                 </li>
                 {% endfor %}
            </ul>
@@ -24,5 +18,3 @@
                 {% endfor %}
             </ul>
         </div>
-</body>
-</html>
