--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,11 +1,11 @@
 <h2>{{ object.title }}</h2>
 
-<p class=other_posts">
-    {% if object_get_previous_by_modify_date %}
+<p class="other_posts">
+    {% if object.get_previous_by_modify_date %}
         <a href="{{ object.get_previous_post.get_absolute_url }}" title="View previous post"> &laquo;--{{ object.get_previous_post }} </a>
     {% endif %}
 
-    {% if object_get_next_by_modify_date %}
+    {% if object.get_next_by_modify_date %}
         <a href="{{ object.get_next_post.get_absolute_url }}" title="View next post"> {{ object.get_next_post }} --&raquo;</a>"
     {% endif %}
 </p>
