--- a/templates/base.css
+++ b/templates/base.css
@@ -18,6 +18,7 @@ div#menu{
   height:20px;
   width: 100%;
   display:table;
+  table-layout: fixed;
   table-spacing: 40px 0px;
   background: #ffa;
   font-size: 8px;
@@ -29,14 +30,14 @@ div#content{
   right:50px;
 }
 div#footer{
-  position: table-cell;
-  vertical-align : middle;
-  text-align : right;
-  padding-right: 20px;
-  color: #ffc;
-  font-weight: normal;
-  font-size: 12px;
+  position: absolute;
+  bottom: 20px;
+  left: 50px;
+  right: 50px;
+  height: 30px;
+  border-top: 1px solid #ccc;
 }
+/* HEADER */
 .maintitle{
   display: table-cell;
   vertical-align: middle;
@@ -48,7 +49,7 @@ div#footer{
 .welcome{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: right;
   padding-right: 20px;
   color: #ffc;
   font-weight: normal;
