--- a/blog/templates/blog/post_archive_month.html
+++ b/blog/templates/blog/post_archive_month.html
@@ -1,15 +1,8 @@
-<h1>Post Archive for {{ month|date:"Y" }}</h1>
-
+<h1>Post Archive for {{ month|date:"N, Y" }}</h1>
+<div>
 <ul>
-    {% for date in date_list %}
-        <li style="display:inline"><a href="{% url 'blog:post_month_archive' year|date:'Y' date|date:'b' %}">{{ date|date:'F' }}</a></li>
+    {% for post in object_list %}
 
     {% endfor %}
-    <ul>
-                {% for post in object_list %}
-                    <li>{{ post.modify_data|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-                    <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
-                    </li>
-                {% endfor %}
-            </ul>
 </ul>
+</div>
