--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -7,11 +7,15 @@
         </li>
 
     {% endfor %}
-    <ul>
-                {% for post in object_list %}
-                    <li>{{ post.modify_data|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-                    <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
-                    </li>
-                {% endfor %}
-            </ul>
 </ul>
+<br/>
+<div>
+    <ul>
+        {% for post in object_list %}
+            <li>{{ post.modify_data|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
+                <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
+            </li>
+        {% endfor %}
+    </ul>
+
+</div>
