--- a/templates/base.css
+++ b/templates/base.css
@@ -4,8 +4,8 @@ body{
 }
 div#header{
   position : absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   height: 30px;
   width: 100%;
   display: table;
@@ -14,7 +14,7 @@ div#header{
 div#menu{
   position : absolute;
   top:30px;
-  left: 0px;
+  left: 0;
   height:20px;
   width: 100%;
   display:table;
@@ -76,7 +76,7 @@ div#footer{
 div#menu li ul{
     display: none;
     position:absolute;
-    margin: 0px;
+    margin: 0;
     padding: 10px 10px 5px 10px;
     list-style: none;
     border-right: 1px solid #ccc;
@@ -110,4 +110,4 @@ td, th{
   padding: 5px 15px;
   font-family: "Lucida Grande", Verdana, Arial, sans-serif;
 }
-}
+
