--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,13 @@
-{% extends base.html %}
+{% extends "base.html" %}
 
-{% block title % } home.html{% endblock title %}
+{% block title % } home.html{% endblock %}
+{% load staticfiles %}
+{% block extrastyle %}{% static "css/home.css" %}{% endblock %}
 {% block content %}
-  <div id="content">
-  콘텐츠 영역
+  <div id="content_home">
+           <div id="homeing>
+                    <a href = "/">
+           </div>
   </div>
 {% endblock content %}
 
