--- a/winter/templates/base.html
+++ b/winter/templates/base.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang = "ko">
   
   <head>
-    <title>{% block title % }Django Web Programing{% endblock %} </title>
+    <title>{% block title %}Django Web Programing </title>{% endblock %}
+
+    { % load staticfiles %}
     <link rel="stylesheet" type = "text/css" href="{% static "css/base.css" %}" />
     <link rel="stylesheet" type = "text/css" href="{% block extrastyle %}{% endblock %}" />
   </head>
