--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}home.html{% endblock %}
+{% block site %}home.html{% endblock %}
 {% load static %}
 {% block extrastyle %}{% static "css/home.css" %}{% endblock %}
 
+{% block title %}
+    <div id="title">
+    This is title area.
+    </div>
+{% endblock %}
 {% block content %}
   <div id="content">
-  <h4 ></h4>
   This is content area.
   </div>
 {% endblock content %}
