--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,15 @@
 
 {% block site %}home.html{% endblock %}
 {% load static %}
-{% block extrastyle %}{% static "css/home.css" %}{% endblock %}
+{% block extrastyle %}{% static "css/home.css/" %}{% endblock %}
 
 {% block title %}
     <div id="title">
-    This is title area.
     </div>
 {% endblock %}
 {% block content %}
   <div id="content">
-  This is content area.
+  Blog
   </div>
 {% endblock content %}
 
