--- a/templates/blog/post_all.html
+++ b/templates/blog/post_all.html
@@ -1,18 +1,27 @@
 {% extends "base.html"%}
+{% load static %}
+{% block extrastyle %}{% static "css/blog.css" %}{% endblock %}
 
 {% block site %} post_all.html{% endblock %}
-{% block content %}
 
-    <div id="content">
-<h2>Blog list</h2>
-
-{% for post in posts %}
-    <h2><a href='{{ post.get_absolute_url }}'>{{post.title  }}</a></h2>
-    {{ post.modify_date|date:"N d일, Y" }}
-    <p>{{ post.description }}</p>
-{% endfor %}
+{% block title %}
+    <div id="title">
+    Algorithm
     </div>
+{% endblock %}
+
+{% block content %}
+    {% for post in posts %}
+        <div id="content">
+        <li>
+        <h4 id ="title" ><a href='{{ post.get_absolute_url }}'>{{post.title}}</a></h4>
+        {{ post.modify_date|date:"N d일, Y" }}
+        <p>{{ post.description }}</p>
+        </li>
+        </div>
+    {% endfor %}
 <br/>
+    <div id="page">
         <span>
             {% if page_obj.has_previous %}
             <a href="?page={{ page_obj.previous_page_number }}">PreviousPage</a>
@@ -21,8 +30,11 @@
             Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
 
             {%  if page_obj.has_next %}
-                <a href="?page {{ page_obj.next_page_number }}">next page</a>
+                <a href="?page={{ page_obj.next_page_number }}">next page</a>
             {% endif %}
         </span>
-
+    </div>
 {% endblock %}
+
+
+
